[gd_scene load_steps=5 format=1]

[ext_resource path="res://Coches/fantasma/fantasma.gd" type="Script" id=1]
[ext_resource path="res://Pistas/Atrezo/MetaVolante/metaVolante.scn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 10, 1, 1.75373 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 12.1259, 1, 1 )

[node name="fantasma" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="fantasma" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="meta" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.67586, 0, 0, 0, 1.67586, 0, 0, 0, 1.67586, 0, 2.30386, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 6, 0, 0, 0, 1, 0, 3.73448, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="meta"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 6, 0, 0, 0, 1, 0, 3.73448, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="meta" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.52862, 0 )

[node name="parcial1" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.0104, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="parcial1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.0104, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial1" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.96588, 0.0435638 )

[node name="parcial2" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 2.93118, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 2.93118, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial2" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.05138, 0.0252419 )

[node name="parcial3" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial3"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial3" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.05138, 0.0436592 )

[node name="parcial4" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.32729, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial4"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.32729, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial4" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.53903, 0.101587 )

[node name="parcial5" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.16885, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial5"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.16885, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial5" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.99445, -0.0504951 )

[node name="parcial6" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.24807, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial6"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.24807, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial6" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.93752, 0.0482407 )

[node name="parcial7" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.40651, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial7"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.40651, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial7" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.99445, -0.00746918 )

[node name="parcial8" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.24807, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial8"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.24807, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial8" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.93752, 0.0253258 )

[node name="parcial9" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial9"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial9" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.93752, -0.0274792 )

[node name="parcial10" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56578, 25.7906 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 0

[node name="CollisionShape" type="CollisionShape" parent="parcial10"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 3.08962, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="metaVolante" parent="parcial10" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.93752, 0.0248375 )

[connection signal="body_enter" from="meta" to="." method="_on_meta_body_enter"]

[connection signal="body_enter" from="parcial1" to="." method="_on_parcial1_body_enter"]

[connection signal="body_enter" from="parcial2" to="." method="_on_parcial2_body_enter"]

[connection signal="body_enter" from="parcial3" to="." method="_on_parcial3_body_enter"]

[connection signal="body_enter" from="parcial4" to="." method="_on_parcial4_body_enter"]

[connection signal="body_enter" from="parcial5" to="." method="_on_parcial5_body_enter"]

[connection signal="body_enter" from="parcial6" to="." method="_on_parcial6_body_enter"]

[connection signal="body_enter" from="parcial7" to="." method="_on_parcial7_body_enter"]

[connection signal="body_enter" from="parcial8" to="." method="_on_parcial8_body_enter"]

[connection signal="body_enter" from="parcial9" to="." method="_on_parcial9_body_enter"]

[connection signal="body_enter" from="parcial10" to="." method="_on_parcial10_body_enter"]


